--- a/index.html
+++ b/index.html
@@ -31,9 +31,18 @@
     <h1>Code Documentation: <i>IGLib Framework</i></h1>
     <i> </i><i><br>
     </i><i> </i>This page contains links to code documentation of the <a
-      moz-do-not-send="true" href="../IGLibFramework/index.html">legacy
-      <i>Investigative Generic Library (IGLib Framework)</i></a>. <br>
-    <br>
+      moz-do-not-send="true" href="../IGLibFramework/index.html"><i>Investigative
+        Generic Library (the IGLib Framework)</i></a>. Follow this link:<br>
+    <ul>
+      <li><a moz-do-not-send="true"
+          href="generated/16_04_iglib_1.7.2/index.html">IGLib 1.7.2 Code
+          Documentation</a> <br>
+      </li>
+    </ul>
+    More complete code documentation can be found here in the <a
+      moz-do-not-send="true"
+href="http://www2.arnes.si/~fgreso/archive/software/codedoc/generated/archive.html">Code
+      Documentation Archive</a>.<br>
     <br>
     <br>
     <br>
