--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <i> </i><i><br>
     </i><i> </i>This page contains links to code documentation of the <a
       moz-do-not-send="true" href="../IGLibFramework/index.html"><i>Investigative
+
         Generic Library (the IGLib Framework)</i></a>. Follow this link:<br>
     <ul>
       <li><a moz-do-not-send="true"
@@ -39,9 +40,10 @@
           Documentation</a> <br>
       </li>
     </ul>
-    More complete code documentation can be found here in the <a
+    Older versions and other code documentation can be found in the <a
       moz-do-not-send="true"
 href="http://www2.arnes.si/~fgreso/archive/software/codedoc/generated/archive.html">Code
+
       Documentation Archive</a>.<br>
     <br>
     <br>
