--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta http-equiv="content-type" content="text/html;
       charset=windows-1252">
-    <title>Software Based on IGLib</title>
+    <title>IGLib Framework's Code Documentation - Investigative Generic Library</title>
     <meta content="Igor Grešovnik" name="author">
     <meta content="Various software based on IGLib.NET (and other),
       developed by Igor Grešovnik and coworkers." name="description">
-    <meta name="keywords" content="software, applications, IGLib,
+    <meta name="keywords" content="software, applications, IGLib, code documentation, Investigative Generic Library,
       IGShell, HashForm, HashShell, file verification, cryptographic
       hash function, cryptography, checksum, MD5, SHA-1, SHA-256,
       SHA-412, software, shell, form, GUI, application, Igor Grešovnik,
@@ -45,11 +45,6 @@
 href="http://www2.arnes.si/~fgreso/archive/software/codedoc/generated/archive.html">Code
 
       Documentation Archive</a>.<br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
     <br>
     <br>
   </body>
