--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
-  <head>
-    <meta http-equiv="content-type" content="text/html;
-      charset=windows-1252">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
     <title>IGLib Framework's Code Documentation - Investigative Generic Library</title>
-    <meta content="Igor Grešovnik" name="author">
+    <meta content="Igor GreÅ¡ovnik" name="author">
     <meta content="Various software based on IGLib.NET (and other),
-      developed by Igor Grešovnik and coworkers." name="description">
+      developed by Igor GreÅ¡ovnik and coworkers." name="description">
     <meta name="keywords" content="software, applications, IGLib, code documentation, Investigative Generic Library,
       IGShell, HashForm, HashShell, file verification, cryptographic
       hash function, cryptography, checksum, MD5, SHA-1, SHA-256,
-      SHA-412, software, shell, form, GUI, application, Igor Grešovnik,
+      SHA-412, software, shell, form, GUI, application, Igor GreÅ¡ovnik,
       Tadej Kodelja, Marko Petek, .NET, Investigative Generic Library,
       IGShell">
     <!-- Google Analitics - account Software 
@@ -23,8 +22,14 @@
 
 	  ga('create', 'UA-96841644-1', 'auto');
 	  ga('send', 'pageview');
-
 	</script>
+
+    <!-- Tags below define icons, CSSs, and scripts. Leave them as absolute URLs. -->
+    <link rel="icon" href="https://ajgorhoe.github.io/icons/IGLibIcon_128x128.png" />
+    <link rel="stylesheet" href="https://ajgorhoe.github.io/scripts/IgsScriptSupport.css" />
+    <!-- The following two script elements perform canonical redirect: -->
+    <script src="https://ajgorhoe.github.io/scripts/IgsScriptTools.js"></script>
+    <script>igsCanonicalRedirect();</script>
   </head>
   <body>
     <br>
